@@ -22,6 +22,9 @@ Unreleased changes (0.8.1)
  7. NUTCH-338 - Remove the text parser as an option for parsing PDF files
     in parse-plugins.xml (Chris A. Mattmann via siren)
 
+ 8. NUTCH-105 - Network error during robots.txt fetch causes file to
+    beignored (Greg Kim via siren)
+    
 Release 0.8 - 2006-07-25
 
  0. Totally new architecture, based on hadoop
